# mfc.demo

./: Build.bat  CMakeLists.txt  mfc.demo.cpp  mfc.demo.pro  stdafx.h
